--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
-    <link rel="stylesheet" href="netflixstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
-        <nav>
+        <nav> 
             <span><img width="53" src="assects/logo.svg" alt=""></span>
             <div>
                 <button class="btn">English</button>
