--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <nav> 
-            <span><img width="53" src="assects/logo.svg" alt=""></span>
+            <span><img width="150" src="assects/logo.svg" alt=""></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
@@ -37,14 +37,14 @@
                     Chromecast, Apple TV, Blu-ray players and more</span>
             </div>
             <div class="secImg">
-                <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+                <img src="assects/tv.png" alt="">
             </div>
         </section>
 
         <div class="seperation"></div>
         <section class="first second">
             <div class="secImg">
-                <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
+                <img src="assects/mobile-0819.jpg" alt="">
             </div>
             <div>
                 <span>Download your shows to watch offline</span>
@@ -60,7 +60,7 @@
                 <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
             </div>
             <div class="secImg">
-                <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png" alt="">
+                <img src="assects/device-pile-in.png" alt="">
             </div>
         </section>
         <div class="seperation"></div>
@@ -69,7 +69,7 @@
             <div class="seperation"></div>
         <section class="first second">
             <div class="secImg">
-                <img src="https://occ-0-6246-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d" alt="">
+                <img src="assects/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png" alt="">
             </div>
             <div>
                 <span>Create profiles for kids</span>
@@ -87,6 +87,62 @@
                     <path d="M4 12H20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
             </div>
+            <div class="faqbox">
+                <span>How much does Netflix cost?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M12 4V20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M4 12H20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+            </div>
+            <div class="faqbox">
+                <span>Where can I watch?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M12 4V20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M4 12H20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+            </div>
+            <div class="faqbox">
+                <span>How do I cancel?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path d="M12 4V20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M4 12H20" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+            </div>
         </section>
+        <div class="seperation"></div>
+
+        <footer>
+            <div class="questions">
+                Questions? Call 000-800-919-1694
+            </div>
+            <div class="footer">
+                <div class="footer-item">
+                    <a href="#">FAQ</a>
+                    <a href="#">Investor Relations</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Speed Test</a>
+                </div>
+
+                <div class="footer-item">
+                    <a href="#">Help Centre</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Cookie Preferences</a>
+                    <a href="#">Legal Notices</a>
+                </div>
+
+                <div class="footer-item">
+                    <a href="#">Account</a>
+                    <a href="#">Ways to Watch</a>
+                    <a href="#">Corporate Information</a>
+                    <a href="#">Only on Netflix</a>
+                </div>
+
+                <div class="footer-item">
+                    <a href="#">Media Centre</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Contact Us</a>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
