--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="main">
         <nav> 
             <span><img width="150" src="assects/logo.svg" alt=""></span>
             <div>
+                <div class="dropdown">
                 <button class="btn">English</button>
+                <div class="dropdown-content">
+                    <a href="#">English</a>
+                    <a href="#">Hindi</a>
+                </div>
+            </div>
                 <button class="btn btn-red-sm">Sign In</button>
             </div>
         </nav>
@@ -30,7 +37,7 @@
 
         </div>
 
-        <section class="first">
+        <section class="first hidden">
             <div>
                 <span>Enjoy on your TV</span>
                 <span>Watch on smart TVs, PlayStation, Xbox,
@@ -42,7 +49,7 @@
         </section>
 
         <div class="seperation"></div>
-        <section class="first second">
+        <section class="first second hidden">
             <div class="secImg">
                 <img src="assects/mobile-0819.jpg" alt="">
             </div>
@@ -54,7 +61,7 @@
         </section>
 
         <div class="seperation"></div>
-        <section class="first third">
+        <section class="first third hidden">
             <div>
                 <span>Watch everywhere</span>
                 <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
@@ -65,9 +72,9 @@
         </section>
         <div class="seperation"></div>
 
-        <section class="first fourth">
+        <section class="first fourth hidden">
             <div class="seperation"></div>
-        <section class="first second">
+        <section class="first second hidden">
             <div class="secImg">
                 <img src="assects/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png" alt="">
             </div>
@@ -76,6 +83,103 @@
                 <span>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</span>
             </div>
         </section>
+
+        <div class="seperation"></div>
+<section class="faq">
+    <h2>Frequently Asked Questions</h2>
+    <div class="faqbox">
+        <span>What is Netflix?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 12H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+    <div class="answer">
+        <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.</p>
+    </div>
+    <div class="faqbox">
+        <span>How much does Netflix cost?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 12H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+    <div class="answer">
+        <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.</p>
+    </div>
+    <div class="faqbox">
+        <span>Where can I watch?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 12H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+    <div class="answer">
+        <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.</p>
+    </div>
+    <div class="faqbox">
+        <span>How do I cancel?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 12H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+    <div class="answer">
+        <p>Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
+    </div>
+    <div class="faqbox">
+        <span>What can I watch on Netflix?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 12H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+    <div class="answer">
+        <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+    </div>
+    <div class="faqbox">
+        <span>Is Netflix good for kids?</span>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 4V20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 12H20" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+    <div class="answer">
+        <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.</p>
+    </div>
+</section>
+
+<div class="seperation"></div>
+<footer>
+    <div class="questions">
+        Questions? Call 000-800-919-1694
+    </div>
+    <div class="footer">
+        <div class="footer-item">
+            <a href="faq">FAQ</a>
+            <a href="faq">Investor Relations</a>
+            <a href="faq">Privacy</a>
+            <a href="faq">Speed Test</a>
+        </div>
+        <div class="footer-item">
+            <a href="faq">Help Centre</a>
+            <a href="faq">Jobs</a>
+            <a href="faq">Cookie Preferences</a>
+            <a href="faq">Legal Notices</a>
+        </div>
+        <div class="footer-item">
+            <a href="faq">Account</a>
+            <a href="faq">Ways to Watch</a>
+            <a href="faq">Corporate Information</a>
+            <a href="faq">Only on Netflix</a>
+        </div>
+        <div class="footer-item">
+            <a href="faq">Media Centre</a>
+            <a href="faq">Terms of Use</a>
+            <a href="faq">Contact Us</a>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
